# google-directory-api-cli

./: LICENSE  README.md  pyproject.toml
src/gcp/: __main__.py  cli.py
src/gcp/directory/: api.py  cli.py
src/gcp/ssh/: generator.py
